# vectorviz

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ProjectionProgress.tsx  ViewSelector.tsx  index.ts
frontend/src/components/Controls/: Controls.tsx
frontend/src/components/DetailsPanel/: DetailsPanel.tsx
frontend/src/components/EdgeLines/: EdgeLines.tsx  index.ts
frontend/src/components/PointCloud/: EdgeLinesOptimized.tsx  FocusCards.tsx  InstancedPoints.tsx  OverlayToolbar.tsx  PointCloud.tsx  SpatialIndex.ts  useSpatialIndex.ts
frontend/src/components/SearchPanel/: SearchPanel.tsx
frontend/src/components/SettingsPanel/: SettingsPanel.tsx
frontend/src/components/Viewport3D/: Viewport3D.tsx  index.ts
frontend/src/hooks/: index.ts  useProjection.ts  useVectorData.ts
frontend/src/store/: index.ts  useAnalyticsStore.ts  useVectorStore.ts
frontend/src/test/: store.test.ts
scripts/: load_sample_data.py
server/: Cargo.toml
server/src/: api.rs  main.rs  projection_job.rs
server/src/analytics/: anomaly.rs  chunk_quality.rs  contradictions.rs  distance_health.rs  distribution.rs  duplicates.rs  export.rs  fingerprint.rs  health.rs  mod.rs  orphans.rs  performance.rs  staleness.rs  types.rs
server/src/db/: mod.rs  weaviate.rs
server/src/projection/: mod.rs  tsne.rs  umap.rs
(+18 files in other folders)
