[package]
name = "vectorviz-server"
version = "0.1.0"
edition = "2021"
description = "VectorViz server — serves frontend, connects to vector databases, computes projections"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
nalgebra = "0.32"
ndarray = "0.15"
kiddo = "4.2"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rayon = "1.9"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hnsw_rs = "0.3"
bincode = "1.3"
dirs = "5.0"
keyring = "3"

# Release profile optimizations for maximum performance
# IMPORTANT: Build with `RUSTFLAGS="-C target-cpu=native"` for AVX2 SIMD in HNSW
[profile.release]
opt-level = 3
lto = "thin"           # Link-time optimization (thin = good balance of speed/compile time)
codegen-units = 1      # Better optimization at cost of compile time
panic = "abort"        # Smaller binary, slightly faster

[profile.release-fast]
inherits = "release"
lto = "fat"            # Maximum optimization for production builds
